[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/examples/automatchmaking.gd" type="Script" id=1]
[ext_resource path="res://src/components/main-frame.tscn" type="PackedScene" id=2]
[ext_resource path="res://data/themes/button-theme.tres" type="Theme" id=3]
[ext_resource path="res://data/fonts/output-text.tres" type="DynamicFont" id=4]
[ext_resource path="res://data/fonts/list-titles.tres" type="DynamicFont" id=5]
[ext_resource path="res://data/fonts/descriptions.tres" type="DynamicFont" id=6]
[ext_resource path="res://data/fonts/sub-titles.tres" type="DynamicFont" id=7]
[ext_resource path="res://src/components/main-output.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.258824, 0.258824, 0.258824, 1 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[node name="Automatchmaking" type="Panel"]
rect_min_size = Vector2( 1280, 720 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Frame" parent="." instance=ExtResource( 2 )]

[node name="Title" parent="Frame/Main/Topbar" index="1"]
text = "Auto-Matchmaking Example"

[node name="Message" type="Label" parent="Frame/Main" index="1"]
margin_top = 73.0
margin_right = 905.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 6 )
text = "Here we just test out an automatic matchmaking function that finds you a lobby to join.  You can add filters to this or check for specific lobby data that is set.  However, this is just a basic one that checks from closest to worldwide."
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Displays" type="HBoxContainer" parent="Frame/Main" index="2"]
margin_top = 137.0
margin_right = 905.0
margin_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25
__meta__ = {
"_edit_lock_": true
}

[node name="Outputs" type="VBoxContainer" parent="Frame/Main/Displays"]
margin_right = 580.0
margin_bottom = 415.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25
__meta__ = {
"_edit_lock_": true
}

[node name="Lobby" type="Label" parent="Frame/Main/Displays/Outputs"]
margin_right = 580.0
margin_bottom = 19.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = "Lobby ID: 0"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Output" parent="Frame/Main/Displays/Outputs" instance=ExtResource( 8 )]
unique_name_in_owner = true
margin_top = 44.0
margin_right = 580.0
margin_bottom = 415.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerList" type="VBoxContainer" parent="Frame/Main/Displays"]
margin_left = 605.0
margin_right = 905.0
margin_bottom = 415.0
rect_min_size = Vector2( 300, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="Frame/Main/Displays/PlayerList"]
margin_right = 300.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = "Player List (0)"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Players" type="VBoxContainer" parent="Frame/Main/Displays/PlayerList"]
margin_top = 23.0
margin_right = 300.0
margin_bottom = 415.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Chat Title" type="Label" parent="Frame/Main" index="3"]
margin_top = 577.0
margin_right = 905.0
margin_bottom = 596.0
custom_fonts/font = ExtResource( 7 )
text = "Chat"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Messaging" type="HBoxContainer" parent="Frame/Main" index="4"]
margin_top = 621.0
margin_right = 905.0
margin_bottom = 670.0
custom_constants/separation = 25
__meta__ = {
"_edit_lock_": true
}

[node name="Chat" type="LineEdit" parent="Frame/Main/Messaging"]
margin_right = 730.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/read_only = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
editable = false
placeholder_text = "Enter a chat message..."
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_lock_": true
}

[node name="Send" type="Button" parent="Frame/Main/Messaging"]
margin_left = 755.0
margin_right = 905.0
margin_bottom = 49.0
rect_min_size = Vector2( 150, 0 )
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
disabled = true
text = "Send Message"
__meta__ = {
"_edit_lock_": true
}

[node name="Title" parent="Frame/Sidebar/Options/List" index="0"]
text = "Lobby Functions"

[node name="FindLobby" type="Button" parent="Frame/Sidebar/Options/List" index="1"]
margin_top = 32.0
margin_right = 270.0
margin_bottom = 60.0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
text = "Find Lobby"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Leave" type="Button" parent="Frame/Sidebar/Options/List" index="2"]
margin_top = 70.0
margin_right = 270.0
margin_bottom = 98.0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
disabled = true
text = "Leave Lobby"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Spacer" type="Label" parent="Frame/Sidebar/Options/List" index="3"]
margin_top = 108.0
margin_right = 270.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Back" type="Button" parent="Frame/Sidebar/Options/List" index="4"]
margin_top = 140.0
margin_right = 270.0
margin_bottom = 168.0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
text = "Back To Main Menu"
align = 0
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="Frame/Main/Messaging/Send" to="." method="_on_send_chat_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/FindLobby" to="." method="_on_find_lobby_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/Leave" to="." method="_on_leave_lobby_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/Back" to="." method="_on_back_pressed"]

[editable path="Frame"]
